--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <%= render 'layouts/nav' %>
+      <% render 'layouts/nav' %>
     </header>
     <main role="main">
        <%= yield %>
