--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,21 @@
-	<%= link_to "Login", @callback %>
+<div class="container">
+	<div class="jumbotron">
+	<div class="row text-center">
+		<h1>Print Schedule</h1>
+		<p>
+			Enter your Front Desk domain name:
+		</p>
+		
+			<%= form_tag "/", :method => :get do %>
+		<p>
+				https://<%= text_field_tag "domain"%>.frontdeskhq.com
+		</p>
+		<p>
+			<%= submit_tag "Login with Front Desk",  :class => "btn btn-lg btn-success" %>
+		</p>
+			
+			<% end %>
+		
+	</div>
+	</div>
+</div>
