--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -11,7 +11,7 @@
                 <% if person["profile_photo"] != nil %>
                   <%= image_tag(person["profile_photo"]["x50"], :class=>"media-object")  %>
                 <% else %>
-                  <%= image_tag("avatar.jpeg", :class=>"media-object", :size=>"50") %>
+                  <%= image_tag(asset_path("avatar.jpeg"), :class=>"media-object", :size=>"50") %>
                 <% end %> 
               </div>
               <div class="pull-left">
