--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -50,4 +50,5 @@
   </div>
 
   <%= link_to "Back to Clients List", "/clients", :class=>"no-print btn btn-default" %>
+  <%= @reportingVisits %>
 </div>
